<resources>
    <string name="app_name">Villive</string>
    <string name="user_name">백현서</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_chatting">ChattingActivity</string>
    <string name="title_activity_management">ManagementActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_user_log_in">user_LogIn</string>

    <string name="trim"> </string>
    <string name="start_view_text">빌리브가 처음이신가요?</string>
    <string name="start_view_text3">회원가입 후 빌리브의 다양한 서비스를 이용해보세요.</string>
    <string name="start_view_text2">회원가입 하러가기</string>

    <string name="auth">인증하기</string>
    <string name="auth_text">QR 인증하기</string>
    <string name="auth_text2">QR 코드 인증이 어렵다면?</string>
    <string name="auth_text3">건물코드 인증하기</string>
    <string name="auth_text4">건물코드를 입력하세요</string>

    <string name="sign_up_text">사용자 정보를 입력하세요</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="pw_check">비밀번호 확인</string>
    <string name="name">이름</string>
    <string name="home_num">세대 호수</string>
    <string name="phone">전화번호</string>

    <string name="sign_in">가입하기</string>
    <string name="log_in">로그인</string>

    <string name="community">게시판</string>
    <string name="community_group">단체 게시판</string>
    <string name="community_purchase">공동구매 게시판</string>
    <string name="community_complain">민원 게시판</string>
    <string name="community_share">나눔 게시판</string>
    <string name="community_club">동호회 게시판</string>

    <string name="description_group">입주민들과 자유롭게 소통해요 !</string>
    <string name="description_purchase">입주민들과 함께 구매하고 절약해요 !</string>
    <string name="description_complain">입주민 여러분들의 불편사항을 알려주세요 !</string>
    <string name="description_share">버리지 말고 입주민들과 나눠요 !</string>
    <string name="description_club">입주민들과 함께 해요 !</string>

    <string name="notice">알림</string>
    <string name="complain_status">민원처리 현황</string>

    <string name="write_post">게시글 작성</string>
    <string name="add_post_description">상대방을 비방하거나 욕설이 포함된 게시글을 작성하는 경우\n\t\t\t\t\t\t\t게시판 이용이 제한될 수 있습니다.</string>
    <string name="add_post">게시글 등록</string>
    <string name="add_post_description2">내용을 입력하세요.</string>

    <string name="anonymous">익명</string>
    <string name="profile">프로필</string>


    <string name="add_post_description3">입주민들과 자유롭게 소통하는 단체 게시판</string>
    <string name="add_post_description4">입주민들과 함께 구매하고 절약하는 공동구매 게시판</string>
    <string name="add_post_description5">민원사항을 자유롭게 건의하는 민원 게시판</string>
    <string name="add_complain_post">민원 분류를 선택하고 내용을 입력해주세요.</string>
    <string name="add_complain_kind">민원 분류 : </string>
    <string name="add_post_description6">입주민들과 나누고 아끼는 나눔 게시판</string>
    <string name="add_post_description7">입주민들과 함께 활동하는 동호회 게시판</string>

    <string name="setting">Setting</string>
    <string name="setting_description">프로필 설정</string>
    <string name="setting_description2">비밀번호 변경</string>
    <string name="setting_description3">알림 설정</string>
    <string name="setting_description4">로그아웃</string>
    <string name="setting_description5">회원 탈퇴</string>
    <string name="setting_description6">세대 호수</string>
    <string name="setting_PIPP">개인정보 처리 방침</string>
</resources>