<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Community.Community"
    android:background="#FFFFFF">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/logo_view"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:contentDescription="@string/trim"
                android:src="@drawable/villive_logo_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="155dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="#454040"
                android:text="@string/community"
                android:textColor="#FF454040"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/ibtn_notice"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:contentDescription="@string/notice"
                app:srcCompat="@drawable/notice" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="80dp">


            <ImageButton
                android:id="@+id/ibtn_group"
                android:layout_width="390dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:background="#00FF0000"
                android:contentDescription="@string/community_group"
                app:srcCompat="@drawable/rectangle" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/community_group"
                android:text="@string/community_group"
                android:textSize="20sp"
                android:textColor="#FF454040"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:layout_marginTop="55dp"
                android:textColor="#FF454040"
                android:contentDescription="@string/description_group"
                android:text="@string/description_group"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/community_group"
                app:srcCompat="@drawable/community_group" />


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="180dp">

            <ImageButton
                android:id="@+id/ibtn_purchase"
                android:layout_width="390dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:background="#00FF0000"
                android:contentDescription="@string/community_purchase"
                app:srcCompat="@drawable/rectangle" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:textColor="#FF454040"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/community_purchase"
                android:text="@string/community_purchase"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:textColor="#FF454040"
                android:layout_marginTop="55dp"
                android:contentDescription="@string/description_purchase"
                android:text="@string/description_purchase"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/community_purchase"
                app:srcCompat="@drawable/community_purchase" />


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="280dp">

            <ImageButton
                android:id="@+id/ibtn_complain"
                android:layout_width="390dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:background="#00FF0000"
                android:contentDescription="@string/community_complain"
                app:srcCompat="@drawable/rectangle" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:layout_marginTop="15dp"
                android:textColor="#FF454040"
                android:contentDescription="@string/community_complain"
                android:text="@string/community_complain"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:layout_marginTop="55dp"
                android:textColor="#FF454040"
                android:contentDescription="@string/description_complain"
                android:text="@string/description_complain"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/community_complain"
                app:srcCompat="@drawable/community_complain" />


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="380dp">

            <ImageButton
                android:id="@+id/ibtn_share"
                android:layout_width="390dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:background="#00FF0000"
                android:contentDescription="@string/community_share"
                app:srcCompat="@drawable/rectangle" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/community_share"
                android:textColor="#FF454040"
                android:text="@string/community_share"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:textColor="#FF454040"
                android:layout_marginTop="55dp"
                android:contentDescription="@string/description_share"
                android:text="@string/description_share"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/community_share"
                app:srcCompat="@drawable/community_share" />


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="480dp">

            <ImageButton
                android:id="@+id/ibtn_club"
                android:layout_width="390dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:background="#00FF0000"
                android:contentDescription="@string/community_club"
                app:srcCompat="@drawable/rectangle" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:textColor="#FF454040"
                android:textStyle="bold"
                android:text="@string/community_club" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:layout_marginTop="55dp"
                android:textColor="#FF454040"
                android:contentDescription="@string/description_club"
                android:text="@string/description_club"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/community_club"
                app:srcCompat="@drawable/community_club" />


        </FrameLayout>
    </LinearLayout>
  </LinearLayout>