<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User_SignPage.user_BuildingAuth"
    android:background="#F9FFF1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/trim"
                app:srcCompat="@drawable/villive_logo_green" />

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="200dp">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:text="@string/trim" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="400dp">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="350dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:contentDescription="@string/trim"
                app:srcCompat="@drawable/rectangle" />

            <EditText
                android:id="@+id/et_vill_code"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="text"
                android:layout_gravity="center"
                android:background="@drawable/rectangle"
                android:autofillHints="@string/auth_text4"
                android:hint="@string/auth_text4"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="500dp">

            <Button
                android:id="@+id/btn_to_auth"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/yellow"
                android:textColor="@color/black"
                android:text="@string/auth" />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>